Release eumw-3.2.0